Liceo Scientifico 4/Informatica Liceo/Java/Compiti estate/Da libro di testo/Capitolo 3/Problema 4/Errore.txt
Test.java:5: error: incompatible types: possible lossy conversion from double to int
                int volume = 15.0;
                             ^
1 error